@@ -8,11 +8,11 @@ Build-Depends: debhelper (>= 9),
                gnome-pkg-tools (>= 0.10),
                python-all-dev (>= 2.6.6-3~),
                python3-all-dev,
-               libglib2.0-dev (>= 2.34.2),
+               libglib2.0-dev (>= 2.35.9),
                libcairo2-dev,
                libffi-dev (>= 3.0.5),
-               gobject-introspection (>= 1.35.8),
-               libgirepository1.0-dev (>= 1.35.8),
+               gobject-introspection (>= 1.35.9),
+               libgirepository1.0-dev (>= 1.35.9),
                python-cairo-dev (>= 1.2.0),
                python3-cairo-dev (>= 1.10.0+dfsg-3),
                xsltproc,
@@ -28,8 +28,8 @@ Build-Depends: debhelper (>= 9),
                python3-all-dbg,
                python-apt-dbg,
                python-cairo-dbg,
-               gir1.2-glib-2.0 (>= 1.35.8),
-               gir1.2-freedesktop (>= 1.35.8),
+               gir1.2-glib-2.0 (>= 1.35.9),
+               gir1.2-freedesktop (>= 1.35.9),
                gir1.2-gtk-3.0
 X-Python-Version: >= 2.7
 Standards-Version: 3.9.4
@@ -43,7 +43,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python:Depends},
          ${shlibs:Depends},
          ${misc:Depends},
-         gir1.2-glib-2.0 (>= 1.34.2)
+         gir1.2-glib-2.0 (>= 1.35.9)
 Provides: ${python:Provides}
 Suggests: python-gi-cairo
 Breaks: python-gobject (<< 3.0.2-4),
@@ -64,7 +64,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python3:Depends},
          ${shlibs:Depends},
          ${misc:Depends},
-         gir1.2-glib-2.0 (>= 1.34.2)
+         gir1.2-glib-2.0 (>= 1.35.9)
 Conflicts: python3-gobject
 Provides: python3-gobject
 Replaces: python3-gobject
@@ -147,7 +147,7 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          python-gi (= ${binary:Version}),
          python3-gi (= ${binary:Version}),
-         libglib2.0-dev (>= 2.24.0),
+         libglib2.0-dev (>= 2.35.9),
          libffi-dev (>= 3.0.5)
 Breaks: python-gobject-dev (<< 3.0.2-4)
 Replaces: python-gobject-dev (<< 3.0.2-4)
